--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-#taskbar {
-  display: inline-block;
-}
-
 #desktop {
   height: calc(100% - 54px);
   width: 100%;
@@ -11,15 +7,19 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 300px;
   overflow: hidden;
+}
+
+.window-content {
+  width: 100%;
+  height: calc(100% - 40px);
 }
 
 .titlebar {
   height: 40px;
   width: 100%;
-  background-color: #f5f5f4;
   margin: 0px;
 }
 
