--- a/apps/terminal/views/terminal.html
+++ b/apps/terminal/views/terminal.html
@@ -1,7 +1,7 @@
 <div id="newwindow" class="window shadow-lg resizable bg-slate-800 backdrop-blur-lg">
     <div id="newwindowtitlebar" class="pl-5 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between text-gray-100">
       Terminal
-      <div class="flex-row flex" style="pointer-events: none;">
+      <div class="flex-row flex">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="white" class="w-6 h-6 mr-3 cursor-pointer">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
