text edit app, file drag and drop, launch arguments, better backend file implementaion

--- a/apps/terminal/views/terminal.html
+++ b/apps/terminal/views/terminal.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="ml-5 mr-5 mb-5">
-        <input id="ConsoleTB" type="text" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm bg-gray-500/10 backdrop-blur-lg text-gray-100" placeholder="Enter Console Command" onkeydown="termruncode(event)">
+        <input id="ConsoleTB" type="text" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm bg-gray-500/10 backdrop-blur-lg text-gray-100" placeholder="Enter Console Command" onkeydown="termruncode(event)" ondragover="acceptdrop(event)" ondrop="drop(event)">
       </div>
     </div>
 </div>
